--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Challenge 4</title>
+        <title>Responsive Template</title>
         <meta charset="utf-8">
         <link rel=" stylesheet" href="style.css">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
